SQLiteEngine jar made, connected to server.